# screenme

./: README.md  pyproject.toml
screenme/: __main__.py  main.py  screenshot.py  webcam.py
